@@ -1,4 +1,7 @@
-13-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
+16-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
+	* Added support to read MiniTree
+
+14-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
 	* Added classes to read jets
 
 13-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
